# App-To-Do-List

./: .gitignore  README.MD  docker-compose.yaml
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/app_settings/: asgi.py  settings.py  urls.py  wsgi.py
backend/apps/projects/: admin.py  models.py  urls.py
backend/apps/projects/api/: serializers.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py
backend/apps/tasks/: admin.py  models.py  urls.py
backend/apps/tasks/api/: serializers.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_task_user.py
backend/apps/users/: models.py
backend/apps/users/migrations/: 0001_initial.py
backend/tools/: serializers.py
frontend/: Dockerfile  README.md  package.json
frontend/src/: main.js
frontend/src/api/: app.api.js
frontend/src/components/: Headers.vue  SIdeMenu.vue
frontend/src/components/icon/: IconPriority.vue
frontend/src/components/layout/: DashboardLayout.vue  PageNotFound.vue
frontend/src/components/modal/: FormTask.vue  FormUpdateTask.vue
frontend/src/helper/: axios.config.js  utils.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/view/AboutPage/: AboutPage.vue
frontend/src/view/HomePage/: HomePage.vue
frontend/src/view/ProjectsPage/: ProjectsPage.vue  SprintPage.vue
